[tool.poetry]
name = "curency"
version = "0.1.0"
description = ""
authors = ["Alexander Shcherbanyuk <s0ul@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
twirp = "^0.0.3"
uvicorn = "^0.14.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
